<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".Tab3">


    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshProfile"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v4.widget.NestedScrollView
            android:id="@+id/profileScrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true" >

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <ImageView
                    android:id="@+id/imageViewProfilePage"
                    android:contentDescription="@string/profilePictureDescription"
                    android:layout_width="108dp"
                    android:layout_height="108dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/profile" />

                <TextView
                    android:id="@+id/textViewProfileUsername"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@+id/imageViewProfilePage"
                    app:layout_constraintTop_toTopOf="@+id/imageViewProfilePage"
                    tools:layout_editor_absoluteY="36dp" />

                <TextView
                    android:id="@+id/textViewProfileJoinDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:text="@string/join_date"
                    app:layout_constraintStart_toEndOf="@+id/imageViewProfilePage"
                    app:layout_constraintTop_toBottomOf="@+id/textViewProfileUsername" />

                <TextView
                    android:id="@+id/textViewProfileFavGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:text="@string/favorite_group"
                    app:layout_constraintStart_toEndOf="@+id/imageViewProfilePage"
                    app:layout_constraintTop_toBottomOf="@+id/textViewProfileJoinDate" />

                <TextView
                    android:id="@+id/textViewProfileNumPosts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    app:layout_constraintStart_toEndOf="@+id/imageViewProfilePage"
                    app:layout_constraintTop_toBottomOf="@+id/textViewProfileFavGroup" />

                <!--<TextView
                    android:id="@+id/textViewProfilePostScore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:text="000 post score"
                    app:layout_constraintStart_toEndOf="@+id/imageViewProfilePage"
                    app:layout_constraintTop_toBottomOf="@+id/textViewProfileNumPosts" />-->

                <TextView
                    android:id="@+id/textViewProfileBio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginEnd="16dp"
                    android:textStyle="italic"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageViewProfilePage" />

                <Button
                    android:id="@+id/logoutButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:background="@color/colorPrimary"
                    android:minWidth="72dp"
                    android:minHeight="24dp"
                    android:padding="0dp"
                    android:text="@string/logout"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.976"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/followButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:background="@color/colorPrimary"
                    android:minWidth="72dp"
                    android:minHeight="24dp"
                    android:padding="0dp"
                    android:text="@string/follow"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.976"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/noPostsTextViewProfile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="36dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:text="@string/noPostsFound"
                    android:textStyle="italic"
                    android:visibility="visible"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textViewProfileBio" />

                <LinearLayout
                    android:id="@+id/profile_list_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="36dp"
                    android:orientation="vertical"
                    app:layout_constraintTop_toBottomOf="@+id/textViewProfileBio" />
            </android.support.constraint.ConstraintLayout>
        </android.support.v4.widget.NestedScrollView>
    </android.support.v4.widget.SwipeRefreshLayout>

    <ProgressBar
        style="?android:attr/progressBarStyleLarge"
        android:indeterminate="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="25dp"
        android:visibility="gone"/>

</RelativeLayout>