<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:paddingTop="20dp"
    android:paddingLeft="20dp"
    android:paddingStart="20dp"
    android:paddingRight="20dp"
    android:paddingEnd="20dp" >

    <android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".NewPostActivity" >

        <TextView
            android:id="@+id/newPostTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:text="@string/newPost"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/selectGroupTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="24dp"
            android:text="@string/selectGroup"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/newPostTextView" />

        <RelativeLayout
            android:id="@+id/dropdownRelativeLayout"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="12dp"
            android:layout_weight=".28"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/selectGroupTextView">

            <Spinner
                android:id="@+id/groupSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:popupBackground="@color/colorPrimary" />

            <ImageView
                android:contentDescription="@string/dropdownImageDescription"
                android:layout_width="39dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:src="@drawable/dropdown_arrow_white" />
        </RelativeLayout>

        <TextView
            android:id="@+id/enterPostTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="24dp"
            android:text="@string/enterYourPost"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dropdownRelativeLayout" />

        <EditText
            android:id="@+id/postEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="12dp"
            android:background="@color/colorPrimary"
            android:ems="10"
            tools:targetApi="o"
            android:autofillHints="post"
            android:hint="@string/newPostHint"
            android:inputType="textMultiLine"
            android:padding="12dp"
            android:textColor="@android:color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/enterPostTextView" />

        <!--
        <TextView
            android:id="@+id/selectImageTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="24dp"
            android:text="Add an image?"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/postEditText" />

        <Button
            android:id="@+id/selectImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="12dp"
            android:padding="10dp"
            android:background="@color/colorPrimary"
            android:text="Select Image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/selectImageTextView" />

        <Button
            android:id="@+id/takePictureButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="112dp"
            android:layout_marginLeft="112dp"
            android:layout_marginTop="8dp"
            android:background="@color/colorPrimary"
            android:padding="10dp"
            android:text="Take Picture"
            app:layout_constraintStart_toEndOf="@+id/selectImageButton"
            app:layout_constraintTop_toBottomOf="@+id/selectImageTextView" />

        <LinearLayout
            android:id="@+id/imageViewRelativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="12dp"
            android:orientation="horizontal"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/selectImageButton">

            <ImageView
                android:id="@+id/selectedImageView1"
                android:layout_width="100dp"
                android:layout_height="150dp"
                android:background="@drawable/image_placeholder_general" />

            <ImageView
                android:id="@+id/selectedImageView2"
                android:layout_width="100dp"
                android:layout_height="150dp"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:background="@drawable/image_placeholder_general" />

            <ImageView
                android:id="@+id/selectedImageView3"
                android:layout_width="100dp"
                android:layout_height="150dp"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:background="@drawable/image_placeholder_general" />
        </LinearLayout>
        -->

        <Button
            android:id="@+id/submitPostButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="24dp"
            android:padding="10dp"
            android:background="@color/colorPrimary"
            android:text="@string/makePost"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/postEditText" />
    </android.support.constraint.ConstraintLayout>

</ScrollView>